Wrapping expression so that it has more room if it has a \n. Also fixed a bug with return in Attribute.exprString.

--- a/style/index.styl
+++ b/style/index.styl
@@ -329,6 +329,12 @@ HeaderSize = 18px
   .AttributeRowExpression
     flex-grow 1
 
+  &.isWrapped
+    flex-wrap wrap
+    .AttributeRowExpression
+      padding-left 3.25em
+      width: 100%
+
   .AttributeControl
     color #c66
     width 1em
